fixed navbar spacing

--- a/styles.css
+++ b/styles.css
@@ -81,7 +81,7 @@ ul li {
     color: #3d3d3d;
     text-decoration: none;
     font-size: 17px;
-    width: 20%;
+    width: 18.25%;
     text-align: center; /* If you want the text to be centered */
     font-weight: bold;
 }
